Telefonnummerprüfung im Interface integriert

--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,9 @@
             ],
             "styles": [
               {
+                "input": "./node_modules/intl-tel-input/build/css/intlTelInput.css"
+              },
+              {
                 "input": "src/theme/variables.scss"
               },
               {
