--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.7",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
@@ -37,8 +38,12 @@
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
     "core-js": "^2.5.4",
+    "google-libphonenumber": "^3.2.9",
+    "intl-tel-input": "^14.1.0",
     "ionic-native": "^2.9.0",
     "mapbox-gl": "^1.9.1",
+    "ngx-bootstrap": "^5.6.1",
+    "ngx-intl-tel-input": "^2.3.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
