--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/animations": "^9.1.7",
     "@angular/common": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~8.2.14",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
@@ -38,6 +39,7 @@
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
     "core-js": "^2.5.4",
+    "firebase": "^7.14.4",
     "google-libphonenumber": "^3.2.9",
     "intl-tel-input": "^14.1.0",
     "ionic-native": "^2.9.0",
