--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.14",
     "@ionic-native/android-permissions": "^5.26.0",
     "@ionic-native/core": "^5.24.0",
+    "@ionic-native/firebase-authentication": "^5.26.0",
     "@ionic-native/geolocation": "^5.24.0",
     "@ionic-native/native-geocoder": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -32,16 +33,24 @@
     "@ionic/storage": "^2.2.0",
     "cordova": "^9.0.0",
     "cordova-android": "^8.1.0",
-    "cordova-ios": "^4.5.5",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-android-permissions": "^1.0.2",
+    "cordova-plugin-browsertab": "^0.2.0",
+    "cordova-plugin-buildinfo": "^4.0.0",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-customurlscheme": "5.0.1",
     "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-firebase-authentication": "3.3.0",
     "cordova-plugin-geolocation": "4.0.2",
+    "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
+    "cordova-universal-links-plugin": "^1.2.1",
+    "cordova-universal-links-plugin-fix": "^1.2.1",
     "core-js": "^2.5.4",
     "firebase": "^7.14.4",
     "google-libphonenumber": "^3.2.9",
@@ -97,7 +106,15 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-nativegeocoder": {}
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-firebase-authentication": {},
+      "cordova-universal-links-plugin": {},
+      "cordova-plugin-buildinfo": {},
+      "cordova-plugin-browsertab": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-customurlscheme": {
+        "URL_SCHEME": "com.googleusercontent.apps.946261770679-5gr9o5bbab0plqreovpnjs64n2lpa399"
+      }
     },
     "platforms": [
       "android",
