--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
+    "cordova-support-android-plugin": "^1.0.2",
+    "cordova-support-google-services": "^1.4.0",
     "cordova-universal-links-plugin": "^1.2.1",
     "cordova-universal-links-plugin-fix": "^1.2.1",
     "core-js": "^2.5.4",
@@ -106,13 +108,18 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-firebase-authentication": {},
+      "cordova-plugin-firebase-authentication": {
+        "FIREBASE_AUTH_VERSION": "19.3.+"
+      },
       "cordova-universal-links-plugin": {},
       "cordova-plugin-buildinfo": {},
       "cordova-plugin-browsertab": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-customurlscheme": {
-        "URL_SCHEME": "com.googleusercontent.apps.946261770679-5gr9o5bbab0plqreovpnjs64n2lpa399"
+        "URL_SCHEME": "com.googleusercontent.apps.946261770679-5gr9o5bbab0plqreovpnjs64n2lpa399",
+        "ANDROID_SCHEME": " ",
+        "ANDROID_HOST": " ",
+        "ANDROID_PATHPREFIX": "/"
       },
       "cordova-plugin-nativegeocoder": {
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "Use geocoder service"
