Fixes Cordova + Android Build Bug, Adds google-services.json, Fixes Typo

--- a/.github/workflows/ionicBuild.yml
+++ b/.github/workflows/ionicBuild.yml
@@ -48,7 +48,7 @@ jobs:
       run: npx ionic build
     - name: Cordova Add Android
       run: npx ionic cordova platform add android
-    - name: Cordova Add Android
+    - name: Cordova Prepare Android
       run: npx ionic cordova prepare android
 
   ios:
