--- a/.github/workflows/ionicBuild.yml
+++ b/.github/workflows/ionicBuild.yml
@@ -3,9 +3,9 @@ name: Ionic & Cordova Build
 
 on:
   push:
-    branches: [ master, backend-integration ]
+    branches: [ master, backend-integration, ci-test ]
   pull_request:
-    branches: [ master, backend-integration ]
+    branches: [ master, backend-integration, ci-test ]
 
 jobs:
   android:
@@ -20,6 +20,14 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Cache Node Modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }}
+        restore-keys: ${{ runner.os }}-build-${{ env.cache-name }}-
     - name: Install Dependencies
       run: npm ci
       env:
@@ -28,8 +36,6 @@ jobs:
       run: npx ionic build
     - name: Cordova Add Android
       run: npx ionic cordova platform add android
-    - name: Cordova Prepare Android
-      run: npx ionic cordova prepare android
     - name: Copy google-service.json
       run: cp google-services.json platforms/android/app/
     - name: Cordova Build Android
@@ -52,6 +58,22 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - name: Cache Node Modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }}
+        restore-keys: ${{ runner.os }}-build-${{ env.cache-name }}-
+    - name: Cache CocoaPods
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-cocoapods
+      with:
+        path: ~/Library/Caches/CocoaPods/Pods
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }}
+        restore-keys: ${{ runner.os }}-build-${{ env.cache-name }}-
     - name: Install Dependencies
       run: npm ci
       env:
@@ -60,7 +82,5 @@ jobs:
       run: npx ionic build
     - name: Cordova Add iOS
       run: npx ionic cordova platform add ios
-    - name: Cordova Prepare iOS
-      run: npx ionic cordova prepare ios
     - name: Cordova Build iOS
       run: npx ionic cordova build ios
