--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.7",
-    "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
+    "@angular/animations": "^9.1.11",
+    "@angular/common": "^9.1.11",
+    "@angular/core": "9.1.11",
     "@angular/fire": "^6.0.0",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
+    "@angular/forms": "^9.1.11",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/router": "^9.1.11",
     "@capacitor/android": "^2.1.2",
     "@capacitor/core": "2.1.2",
     "@ionic-native/android-permissions": "^5.26.0",
@@ -33,6 +33,7 @@
     "@ionic/angular": "^5.0.0",
     "@ionic/cli": "^6.9.2",
     "@ionic/storage": "^2.2.0",
+    "@ngtools/webpack": "^9.1.9",
     "cordova": "^9.0.0",
     "cordova-android": "8.1.0",
     "cordova-ios": "^5.1.1",
@@ -65,17 +66,16 @@
     "libphonenumber-js": "^1.7.53",
     "mapbox-gl": "^1.10.1",
     "ngx-bootstrap": "^5.6.1",
-    "ngx-intl-tel-input": "^2.3.4",
     "rxjs": "^6.5.5",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
-    "@angular/cli": "~8.3.23",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
+    "@angular-devkit/build-angular": "^0.901.9",
+    "@angular/cli": "^9.1.9",
+    "@angular/compiler": "^9.1.11",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "^9.1.11",
     "@capacitor/cli": "2.1.2",
     "@ionic/angular-toolkit": "^2.1.1",
     "@types/jasmine": "~3.3.8",
@@ -89,7 +89,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -99,7 +99,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "3.8.3"
   },
   "description": "An Ionic project",
   "cordova": {
