--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/core": "^5.24.0",
     "@ionic-native/firebase-authentication": "^5.26.0",
     "@ionic-native/geolocation": "^5.24.0",
+    "@ionic-native/native-audio": "^5.27.0",
     "@ionic-native/native-geocoder": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -51,6 +52,7 @@
     "cordova-plugin-geolocation": "4.0.2",
     "cordova-plugin-inappbrowser": "^3.2.0",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
@@ -132,7 +134,8 @@
       },
       "cordova-universal-links-plugin": {},
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "ios",
