--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic-native/native-geocoder": "^5.26.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/vibration": "^5.27.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/cli": "^6.9.2",
     "@ionic/storage": "^2.2.0",
@@ -56,6 +57,7 @@
     "cordova-plugin-nativegeocoder": "^3.4.1",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
+    "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "1.3.3",
     "cordova-support-android-plugin": "^1.0.2",
     "cordova-support-google-services": "^1.4.0",
@@ -135,7 +137,8 @@
       "cordova-universal-links-plugin": {},
       "cordova-plugin-androidx": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-nativeaudio": {}
+      "cordova-plugin-nativeaudio": {},
+      "cordova-plugin-vibration": {}
     },
     "platforms": [
       "ios",
